fix: wrap code around a <code> block around a <pre> block

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a {
     color: blue;
 }
 
-pre {
+pre, code {
     font-family: monospace;
 }
 
@@ -252,13 +252,15 @@ main.page .entries-outside .entry-outside .entry-body {
     border: 1px blue solid;
 }
 
-pre.entry-contents {
+/* Some "!important" directives were added to avoid override by Highlight.js theme */
+pre.entry-contents code {
+    display: block !important;
     margin-top: 0;
-    font-size: 1.1em;
+    font-size: 1.1em !important;
     background-color: white;
-    padding: 0.5em;
+    padding: 0.5em !important;
     border: 1px solid blue;
-    overflow-x: auto;
+    overflow-x: auto !important;
 }
 
 footer {
